// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceDescription renders with currentApplication 1`] = `
<div
  className="content"
  data-automation-id="device-description"
>
  <Memo(Icon)
    ariaLabel="Device"
    className="iconContent"
    iconName="CellPhone"
    role="img"
  />
  <div
    className="deviceAndCurrentApplication"
  >
    Whizbang tablet
    <div
      className="currentApplication"
    >
      Wildlife Manager
    </div>
  </div>
</div>
`;

exports[`DeviceDescription renders with device 1`] = `
<div
  className="content"
  data-automation-id="device-description"
>
  <Memo(Icon)
    ariaLabel="Device"
    className="iconContent"
    iconName="CellPhone"
    role="img"
  />
  Super-Duper Gadget
</div>
`;

exports[`DeviceDescription renders with emulator 1`] = `
<div
  className="content"
  data-automation-id="device-description"
>
  <Memo(Icon)
    ariaLabel="Emulator"
    className="iconContent"
    iconName="Devices3"
    role="img"
  />
  Emulator Extraordinaire
</div>
`;

exports[`DeviceDescription renders with extra classname 1`] = `
<div
  className="content my-class"
  data-automation-id="device-description"
>
  <Memo(Icon)
    ariaLabel="Emulator"
    className="iconContent"
    iconName="Devices3"
    role="img"
  />
  Simple Emulator
</div>
`;
